@@ -19,7 +19,7 @@ public class VisitaService {
     private static final Logger logger = LoggerFactory.getLogger(VisitaService.class);
 
     private final EntityManager entityManager;
-    
+
     @Inject
     public VisitaService(EntityManager entityManager) {
         this.entityManager = entityManager;
@@ -52,41 +52,39 @@ public class VisitaService {
 
     public List<Visita.VisitaDiaria> getVisitasDiarias() {
         String query = """
-                SELECT DATE(v.dataAcesso) as data,
-                       COUNT(v.id) as visitas,
-                       AVG(v.duracao) as tempoMedio
-                FROM Visita v
-                WHERE v.dataAcesso IS NOT NULL
-                GROUP BY DATE(v.dataAcesso)
-                ORDER BY DATE(v.dataAcesso) DESC
-                """;
+                       SELECT DATE(v.dataAcesso) as data,
+                              COUNT(v.id) as visitas,
+                              AVG(v.duracao) as tempoMedio
+                       FROM Visita v
+                       WHERE v.dataAcesso IS NOT NULL
+                       GROUP BY DATE(v.dataAcesso)
+                       ORDER BY DATE(v.dataAcesso) DESC
+                       """;
 
         return entityManager.createQuery(query, Object[].class)
-                .getResultStream()
-                .map(result -> new Visita.VisitaDiaria(
-                        result[0].toString(),
-                        (Long) result[1],
-                        result[2] != null ? Math.round((Double) result[2]) : 0L))
-                .collect(Collectors.toList());
+                            .getResultStream()
+                            .map(result -> new Visita.VisitaDiaria(result[0].toString(),
+                                                                   (Long) result[1],
+                                                                   result[2] != null ? Math.round((Double) result[2]) : 0L))
+                            .toList();
     }
 
     public List<Map<String, Object>> getVisitasPorPagina() {
         String query = """
-                SELECT v.pagina,
-                       COUNT(v.id) as visitas,
-                       AVG(v.duracao) as tempoMedio
-                FROM Visita v
-                WHERE v.pagina IS NOT NULL
-                GROUP BY v.pagina
-                ORDER BY visitas DESC
-                """;
+                       SELECT v.pagina,
+                              COUNT(v.id) as visitas,
+                              AVG(v.duracao) as tempoMedio
+                       FROM Visita v
+                       WHERE v.pagina IS NOT NULL
+                       GROUP BY v.pagina
+                       ORDER BY visitas DESC
+                       """;
 
         return entityManager.createQuery(query, Object[].class)
-                .getResultStream()
-                .map(result -> Map.of(
-                        "pagina", result[0],
-                        "visitas", result[1],
-                        "tempoMedio", result[2] != null ? Math.round((Double) result[2]) : 0L))
-                .collect(Collectors.toList());
+                            .getResultStream()
+                            .map(result -> Map.of("pagina", result[0],
+                                                  "visitas", result[1],
+                                                  "tempoMedio", result[2] != null ? Math.round((Double) result[2]) : 0L))
+                            .toList();
     }
 }
